--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261583629926530%22%3A%22wnNolK4u%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.167Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "datr",
+        "value": "WYcXabSQmi_4unRbJ8tMALOL",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "sb",
+        "value": "WYcXaQcmKHarKKDwpC0KvCcs",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B800x424x1.7000000476837158",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61577965930001",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "xs",
+        "value": "39%3ARN0tQIhKaeoZnw%3A2%3A1767691159%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "fr",
+        "value": "0ESdVTjn3sLYk2yBj.AWdCBGpn1ep9GSdt1gufzjW1Gi8CLGAYVMT9IeyreM8NrOP0ol8.BpF4dZ..AAA.0.0.BpXNOj.AWfpaHMwuNG1T2Q6H_qK-UfEPxc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "pas",
+        "value": "61583629926530%3AM4CtAHkUqm%2C61550262486941%3ACf5S2BNi7g%2C61577965930001%3AxVZTAIzwRm",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101515376%3BT%3A29461656",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767699374",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T11:36:17.168Z",
+        "lastAccessed": "2026-01-06T11:36:17.168Z"
+    }
+]
