--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261583629926530%22%3A%22wnNolK4u%22%7D",
+        "value": "%7B%2261583629926530%22%3A%223aw2oUa0%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.984Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.240Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "locale",
@@ -59,35 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61577965930001",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
-    },
-    {
-        "key": "xs",
-        "value": "39%3ARN0tQIhKaeoZnw%3A2%3A1767691159%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
-    },
-    {
-        "key": "fr",
-        "value": "0ESdVTjn3sLYk2yBj.AWdCBGpn1ep9GSdt1gufzjW1Gi8CLGAYVMT9IeyreM8NrOP0ol8.BpF4dZ..AAA.0.0.BpXNOj.AWfpaHMwuNG1T2Q6H_qK-UfEPxc",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "pas",
@@ -95,25 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.7000000476837158",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
+    },
+    {
+        "key": "wd",
+        "value": "424x944",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61583629926530",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
+    },
+    {
+        "key": "xs",
+        "value": "48%3ANOMpYiuq1jTaNA%3A2%3A1767701040%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
+    },
+    {
+        "key": "fr",
+        "value": "0ESdVTjn3sLYk2yBj.AWeoDcnIOrEWrIZeEAq-OU1ggZ7hZyJECcYHiq-Yxbf_6JbY7yY.BpF4dZ..AAA.0.0.BpXPoy.AWfawd8aT7zfpV3VYQJC0a4qEC4",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "fbl_st",
-        "value": "101531118%3BT%3A29461673",
+        "value": "100422518%3BT%3A29461684",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767700425",
+        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767701042",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T11:53:53.985Z",
-        "lastAccessed": "2026-01-06T11:53:53.985Z"
+        "creation": "2026-01-06T12:04:08.241Z",
+        "lastAccessed": "2026-01-06T12:04:08.241Z"
     }
 ]
