--- a/config.json
+++ b/config.json
@@ -16,12 +16,12 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "🤖JARVIS🤖",
+    "BOTNAME": "🤖ALORA🤖",
     "PREFIX": "+",
     "ADMINBOT": [
-        "100000478146113",
-        "61576520552554",
-        "61550035211214"
+        "61582563251127",
+        "61582563251127",
+        "61582563251127"
     ],
     "NDH": [
         "100000478146113"
