--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "pas",
@@ -68,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.7000000476837158",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
-    },
-    {
-        "key": "wd",
-        "value": "424x944",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "c_user",
@@ -95,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.351Z",
+        "lastAccessed": "2026-01-06T14:22:38.351Z"
     },
     {
         "key": "xs",
@@ -104,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.352Z",
+        "lastAccessed": "2026-01-06T14:22:38.352Z"
     },
     {
         "key": "fr",
-        "value": "0ESdVTjn3sLYk2yBj.AWdMWZPzQZsaH_uSul_3JgCLmDhRYuzaHqIn5F6WXWgFuM82LI0.BpF4dZ..AAA.0.0.BpXRk1.AWeXSdaKIUgfqfvTiqewuVy1jKo",
+        "value": "0ESdVTjn3sLYk2yBj.AWe6EeyQumf0MYa3NudHgmnUDRqvY0XKMwH0ikwfYmjwy8Ulxao.BpF4dZ..AAA.0.0.BpXRqr.AWdS82MIW6jogbLQ84gJOmqKiso",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.352Z",
+        "lastAccessed": "2026-01-06T14:22:38.352Z"
     },
     {
         "key": "fbl_st",
-        "value": "100424380%3BT%3A29461816",
+        "value": "100416677%3BT%3A29461822",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.352Z",
+        "lastAccessed": "2026-01-06T14:22:38.352Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767708981",
+        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767709355",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:16:50.362Z",
-        "lastAccessed": "2026-01-06T14:16:50.362Z"
+        "creation": "2026-01-06T14:22:38.352Z",
+        "lastAccessed": "2026-01-06T14:22:38.352Z"
     }
 ]
