--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.495Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "c_user",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.351Z",
-        "lastAccessed": "2026-01-06T14:22:38.351Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "xs",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.352Z",
-        "lastAccessed": "2026-01-06T14:22:38.352Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "fr",
-        "value": "0ESdVTjn3sLYk2yBj.AWe6EeyQumf0MYa3NudHgmnUDRqvY0XKMwH0ikwfYmjwy8Ulxao.BpF4dZ..AAA.0.0.BpXRqr.AWdS82MIW6jogbLQ84gJOmqKiso",
+        "value": "0ESdVTjn3sLYk2yBj.AWfx7GOl9BwQhdifWIGGYOwDIe-mdXUxnARCfYbf-yhta_GEATo.BpF4dZ..AAA.0.0.BpXSK3.AWcgjl31ziQw64OiH0AyIzD9L0Y",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.352Z",
-        "lastAccessed": "2026-01-06T14:22:38.352Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "fbl_st",
-        "value": "100416677%3BT%3A29461822",
+        "value": "100416344%3BT%3A29461856",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.352Z",
-        "lastAccessed": "2026-01-06T14:22:38.352Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767709355",
+        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767711415",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-06T14:22:38.352Z",
-        "lastAccessed": "2026-01-06T14:22:38.352Z"
+        "creation": "2026-01-06T14:56:57.496Z",
+        "lastAccessed": "2026-01-06T14:56:57.496Z"
     }
 ]
